[Improvement][CI] deploy to k8s
Signed-off-by: Gallardot <gallardot@apache.org>

--- a/.github/workflows/e2e-k8s.yml
+++ b/.github/workflows/e2e-k8s.yml
@@ -106,11 +106,13 @@ jobs:
             registry: apache
             tag: ci
           master:
+            replicas: 1
             livenessProbe:
               initialDelaySeconds: 120
             readinessProbe:
               initialDelaySeconds: 120
           worker:
+            replicas: 1
             livenessProbe:
               initialDelaySeconds: 120
             readinessProbe:
