increase default containers startup timeout

--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
@@ -100,6 +100,11 @@ services:
     depends_on:
       hive-metastore-postgresql:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", ""nc", "-z", "hivemetastore", "9083" ]
+      interval: 5s
+      timeout: 300s
+      retries: 120
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
     networks:
