Support filter restrict network interface

--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -125,6 +125,9 @@ sudo.enable=true
 # network interface preferred like eth0, default: empty
 #dolphin.scheduler.network.interface.preferred=
 
+# network interface restrict like docker0,docker1 , default: docker0
+dolphin.scheduler.network.interface.restrict=docker0
+
 # network IP gets priority, default: inner outer
 #dolphin.scheduler.network.priority.strategy=default
 
