--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
@@ -101,7 +101,7 @@ services:
       hive-metastore-postgresql:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", ""nc", "-z", "localhost", "9083" ]
+      test: [ "CMD-SHELL", "nc", "-z", "localhost", "9083" ]
       interval: 5s
       timeout: 300s
       retries: 120
