try containers env

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,6 +23,9 @@ on:
 
 name: E2E
 
+env:
+  TESTCONTAINERS_HOST_OVERRIDE: "host.docker.internal"
+
 concurrency:
   group: e2e-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
