--- a/dolphinscheduler-bom/pom.xml
+++ b/dolphinscheduler-bom/pom.xml
@@ -901,6 +901,7 @@
                 <groupId>com.sap.cloud.db.jdbc</groupId>
                 <artifactId>ngdbc</artifactId>
                 <version>${ngdbc.version}</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
