--- a/dolphinscheduler-common/src/main/resources/common.properties
+++ b/dolphinscheduler-common/src/main/resources/common.properties
@@ -74,9 +74,9 @@ resource.azure.blob.storage.account.name=<your-account-name>
 resource.azure.blob.storage.connection.string=<your-connection-string>
 
 
-# alibaba cloud access key id, required if you set resource.storage.type=OBS
+# huawei cloud access key id, required if you set resource.storage.type=OBS
 resource.huawei.cloud.access.key.id=<your-access-key-id>
-# alibaba cloud access key secret, required if you set resource.storage.type=OBS
+# huawei cloud access key secret, required if you set resource.storage.type=OBS
 resource.huawei.cloud.access.key.secret=<your-access-key-secret>
 # oss bucket name, required if you set resource.storage.type=OBS
 resource.huawei.cloud.obs.bucket.name=dolphinscheduler
