--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-spark/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-spark/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-datasource-plugin</artifactId>
-        <version>3.1.8-SNAPSHOT</version>
+        <version>3.1.8</version>
     </parent>
 
     <artifactId>dolphinscheduler-datasource-spark</artifactId>
