--- a/dolphinscheduler-task-plugin/dolphinscheduler-task-jupyter/pom.xml
+++ b/dolphinscheduler-task-plugin/dolphinscheduler-task-jupyter/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-task-plugin</artifactId>
-        <version>3.1.8-SNAPSHOT</version>
+        <version>3.1.8</version>
     </parent>
     <artifactId>dolphinscheduler-task-jupyter</artifactId>
     <packaging>jar</packaging>
