--- a/dolphinscheduler-alert/dolphinscheduler-alert-api/pom.xml
+++ b/dolphinscheduler-alert/dolphinscheduler-alert-api/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-alert</artifactId>
-        <version>3.1.8</version>
+        <version>3.1.9-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-alert-api</artifactId>
 
