--- a/dolphinscheduler-alert/dolphinscheduler-alert-plugins/pom.xml
+++ b/dolphinscheduler-alert/dolphinscheduler-alert-plugins/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-alert</artifactId>
-        <version>3.1.8</version>
+        <version>3.1.9-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-alert-plugins</artifactId>
     <packaging>pom</packaging>
