--- a/dolphinscheduler-alert/pom.xml
+++ b/dolphinscheduler-alert/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>dolphinscheduler-alert-plugins</module>
         <module>dolphinscheduler-alert-server</module>
+        <module>dolphinscheduler-listener</module>
     </modules>
 
     <dependencyManagement>
