try to fix e2e timeout error

--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-hive/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 120
+      start_period: 60s
     depends_on:
       hive-server:
         condition: service_healthy
