--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-sqlserver/docker-compose.yaml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/datasource-sqlserver/docker-compose.yaml
@@ -23,8 +23,8 @@ services:
     environment:
       MASTER_MAX_CPU_LOAD_AVG: 100
       WORKER_TENANT_AUTO_CREATE: 'true'
-    ports:
-      - "12345:12345"
+    expose:
+      - 12345
     networks:
       - e2e
     healthcheck:
@@ -37,8 +37,8 @@ services:
         condition: service_healthy
   sqlserver:
     image: alexk002/sqlserver2019_demo:1
-    ports:
-      - "1433:1433"
+    expose:
+      - 1433
     networks:
       - e2e
     healthcheck:
