--- a/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-alert.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-alert.yaml
@@ -34,11 +34,15 @@ spec:
     metadata:
       labels:
         {{- include "dolphinscheduler.alert.labels" . | nindent 8 }}
+      {{- if or .Values.alert.annotations .Values.conf.auto }}
       annotations:
+        {{- if .Values.conf.auto }}
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- end }}
         {{- if .Values.alert.annotations }}
         {{- toYaml .Values.alert.annotations | nindent 8 }}
         {{- end }}
+      {{- end }}
     spec:
       serviceAccountName: {{ template "dolphinscheduler.fullname" . }}
       {{- if .Values.alert.affinity }}
