--- a/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-api.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/deployment-dolphinscheduler-api.yaml
@@ -34,9 +34,14 @@ spec:
     metadata:
       labels:
         {{- include "dolphinscheduler.api.labels" . | nindent 8 }}
-      {{- if .Values.api.annotations }}
+      {{- if or .Values.api.annotations .Values.conf.auto }}
       annotations:
+        {{- if .Values.conf.auto }}
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- end }}
+        {{- if .Values.api.annotations }}
         {{- toYaml .Values.api.annotations | nindent 8 }}
+        {{- end }}
       {{- end }}
     spec:
       serviceAccountName: {{ template "dolphinscheduler.fullname" . }}
