--- a/dolphinscheduler-standalone-server/src/main/resources/application.yaml
+++ b/dolphinscheduler-standalone-server/src/main/resources/application.yaml
@@ -112,7 +112,7 @@ security:
         trust-store: "/ldapkeystore.jks"
         trust-store-password: ""
     oauth2:
-      enable: true
+      enable: false
       provider:
         github:
           authorizationUri: ""
