add kafkaListener(bug: Unable to find LoginModule class when use username/password) change loggerListener to write listener event into file

--- a/dolphinscheduler-listener/dolphinscheduler-listener-plugin/dolphinscheduler-listener-kafka/pom.xml
+++ b/dolphinscheduler-listener/dolphinscheduler-listener-plugin/dolphinscheduler-listener-kafka/pom.xml
@@ -23,19 +23,48 @@
         <artifactId>dolphinscheduler-listener-plugin</artifactId>
         <version>dev-SNAPSHOT</version>
     </parent>
-
-    <artifactId>dolphinscheduler-listener-all</artifactId>
-
+    <artifactId>dolphinscheduler-listener-kafka</artifactId>
+    <name>${project.artifactId}</name>
     <dependencies>
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
-            <artifactId>dolphinscheduler-listener-logger</artifactId>
-            <version>${project.version}</version>
+            <artifactId>dolphinscheduler-listener-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.dolphinscheduler</groupId>
-            <artifactId>dolphinscheduler-listener-kafka</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.5.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
