--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-core/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>dolphinscheduler-api-test</artifactId>
         <groupId>org.apache.dolphinscheduler</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>dev-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
