--- a/dolphinscheduler-api-test/pom.xml
+++ b/dolphinscheduler-api-test/pom.xml
@@ -24,9 +24,10 @@
         <artifactId>dolphinscheduler</artifactId>
         <version>dev-SNAPSHOT</version>
     </parent>
+<!--    <groupId>org.apache.dolphinscheduler</groupId>-->
     <artifactId>dolphinscheduler-api-test</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>dev-SNAPSHOT</version>
 
     <modules>
         <module>dolphinscheduler-api-test-core</module>
