--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-core/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-core/pom.xml
@@ -27,4 +27,11 @@
     </parent>
 
     <artifactId>dolphinscheduler-api-test-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
