--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -29,6 +29,14 @@ concurrency:
 
 
 jobs:
+  get-runner:
+    name get a runner to use for this workflow
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    outputs:
+      RUNNER: ${{ runner.name }}
+    steps:
+      - run: echo "selected runner = ${{ runner.name }}"
   paths-filter:
     name: API-Test-Path-Filter
     runs-on: ubuntu-latest
@@ -44,9 +52,9 @@ jobs:
               - '!(docs/**)'
   build:
     name: API-Test-Build
-    needs: paths-filter
+    needs: [ paths-filter, get-runner ]
     if: ${{ (needs.paths-filter.outputs.not-ignore == 'true') || (github.event_name == 'push') }}
-    runs-on: ubuntu-latest
+    runs-on: ${{needs.get-runner.outputs.RUNNER}}
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
@@ -82,8 +90,8 @@ jobs:
           retention-days: 1
   api-test:
     name: ${{ matrix.case.name }}
-    needs: build
-    runs-on: ubuntu-latest
+    needs: [ build, get-runner ]
+    runs-on: ${{needs.get-runner.outputs.RUNNER}}
     timeout-minutes: 30
     strategy:
       matrix:
