--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>dolphinscheduler-task-plugin</module>
         <module>dolphinscheduler-common</module>
         <module>dolphinscheduler-api</module>
+        <module>dolphinscheduler-api-test</module>
         <module>dolphinscheduler-aop</module>
         <module>dolphinscheduler-dao</module>
         <module>dolphinscheduler-dist</module>
