--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-backend
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-backend
           restore-keys: ${{ runner.os }}-maven-
       - name: Build and Package on ${{ matrix.java }}
         run: |
